--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>COMO EU APRENDI JAVASCRIPT</h1>
     <h3>STEP BY STEP</h3>
 
-    <script src="./index.html"></script>
+    <script src="./JS/teste.js"></script>
 </body>
 </html>
